# practice_PM02_makolikova

./: README.md  diary.txt
Day 10/order_validation_service/: .coverage  README.md  requirements.txt  specification.md  test_cases.md
Day 10/order_validation_service/src/: fake_validator.py
Day 10/order_validation_service/tests/: conftest.py  test_properties.py  test_validate_order.py
Day 10/tests/: conftest.py  test_properties.py  test_validate_order.py
Day 11/project_skyhigh_bdr/: Backup_Policy.md  Disaster_Recovery_Test_Report.md  Infrastructure_Inventory.xlsx  Recovery_Runbook.md
Day 11/project_skyhigh_bdr/Monitoring/: dashboard.json
Day 11/project_skyhigh_bdr/Scripts/: backup_postgres_wal.py  test_backup.py  validate_backup.sh
Day 12/project/: .pdbrc  requirements.txt
Day 12/project/docs/: report.md
Day 12/project/docs/diff/: variant_10.diff
Day 12/project/src/: variant_10.py
Day 12/project/tests/: results.json  temp_Alice.tmp  temp_Bob.tmp  temp_David.tmp  temp_Eve.tmp  temp_Frank.tmp  temp_Grace.tmp  temp_Henry.tmp  temp_Jack.tmp  test_data.csv  test_variant_10.py
Day 13/booking_system/: .coverage  README.md  requirements.txt
Day 13/booking_system/src/domain/: __init__.py  exceptions.py  models.py
Day 13/booking_system/src/dto/: __init__.py  booking_dto.py  hotel_dto.py  room_dto.py
Day 13/booking_system/src/repositories/: __init__.py  base.py  booking_repo.py  hotel_repo.py  room_repo.py
Day 13/booking_system/tests/: conftest.py  test_booking_service.py  test_hotel_service.py
Day 14/fitness_club/: .coverage  requirements.txt
Day 14/fitness_club/docs/: 10.drawio  report.docx
Day 14/fitness_club/src/: exceptions.py  main.py  memory_repositories.py  models.py  repositories.py  schemas.py  service.py
Day 14/fitness_club/tests/: __init__.py  test_service.py
Day 15/: Отчет.docx
Day 15/project/: .coverage  pytest.ini  requirements.txt
Day 15/project/tests/: test_variant10.py
Day 16/: report.docx  ~$report.docx
Day 16/project/: .coverage  requirements.txt
Day 16/project/app/: exceptions.py  models.py  repositories.py
Day 16/project/tests/: conftest.py  test_repository.py
Day 17/booking-system/: .coverage  pytest.ini  requirements.txt  Отчет.md
Day 17/booking-system/src/: booking.py  calculator.py  hotel.py  logistics.py  payment.py  user.py
Day 17/booking-system/tests/: test_booking.py  test_calculator.py  test_hotel.py  test_logistics.py  test_payment.py  test_user.py
Day 18/: Отчет.md
Day 18/booking_system/: .coverage  .flake8  mypy.ini  pyproject.toml  pytest.ini  tox.ini
Day 18/booking_system/requirements/: base.txt  dev.txt  test.txt
Day 18/booking_system/src/application/: dto.py  interfaces.py  services.py
Day 18/booking_system/src/core/: domain.py  events.py  exceptions.py
Day 18/booking_system/src/infrastructure/: external_api.py  repositories.py  uow.py
Day 18/booking_system/src/presentation/: api.py  cli.py
Day 18/booking_system/src/utils/: logger.py  validators.py
Day 18/booking_system/tests/fixtures/: data_factory.py
Day 18/booking_system/tests/integration_off/: test_api.py  test_repositories.py
Day 18/booking_system/tests/unit/: test_additional_coverage.py  test_defects.py  test_domain.py  test_external_api.py  test_services.py  test_validators.py
Day 19/: Текст программы.docx
Day 2/data/: Запись_на_тренировку.csv  Покупка_абонемента.csv  Тренировки.csv  абонементы.csv
Day 2/diagram/: аавыа.mwb
Day 2/sql/: Variant10_DB.sql
Day 20/: variant_1.docx
Day 3/: 10.mwb  10.mwb.bak  schema_Variant10.sql
Day 5/: variant10_day5.sql
Day 6/: README.md  app.py
Day 7/: app.py  create_users.py  requirements.txt
Day 7/database/: schema_Variant10.sql
Day 7/static/: style.css
Day 7/templates/: base.html  clients.html  login.html
Day 7/templates/admin/: add_user.html  dashboard.html  users.html
Day 7/templates/worker/: dashboard.html
Day 8/docs/: GOST_requirements.md  TECHNICAL_DOCUMENTATION.docx  TECHNICAL_TASK.docx  USER_GUIDE.docx
Day 9/analisys_TZ/: 10.docx  ТЗ.txt
(+8 files in other folders)
