# pyproject.toml
[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "booking-logistics-system"
version = "1.2.3"
description = "System for booking and logistics management"
authors = [
    {name = "QA Team", email = "qa@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Flask>=2.3.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "ipython>=8.17.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "mutmut>=2.4.0",
    "faker>=20.1.0",
    "factory-boy>=3.3.0",
    "hypothesis>=6.92.0",
    "responses>=0.24.1",
    "freezegun>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/example/booking-system"
Documentation = "https://docs.example.com"
Repository = "https://github.com/example/booking-system"
Issues = "https://github.com/example/booking-system/issues"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | migrations
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = ["migrations"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --capture=no --maxfail=1 --color=yes"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "performance: Performance tests",
    "smoke: Smoke tests",
    "api: API tests",
    "db: Database tests",
    "e2e: End-to-end tests",
]
norecursedirs = [".git", ".tox", "venv", "__pycache__", "env", ".venv", "node_modules"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_any_decorated = false
strict_equality = true
ignore_missing_imports = true
follow_imports = "silent"
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
exclude = [
    "build/",
    "dist/",
    ".tox/",
    "venv/",
    "__pycache__/",
    ".eggs/",
    ".pytest_cache/",
    ".mypy_cache/",
    "migrations/",
    "tests/",
]

[tool.pylint]
# Настройки для pylint
max-line-length = 88
good-names = ["i", "j", "k", "ex", "Run", "_"]
ignored-modules = ["flask", "sqlalchemy", "alembic", "pytest"]

[tool.mutmut]
paths_to_mutate = ["src/"]
backup = false
runner = "python -m pytest -x"
tests_dir = "tests/"
use_coverage = true
dict_synonyms = ["dict"]